# bonn-modern-cpp

./: .gitignore
homework_1/task_1/: commands.sh
homework_1/task_2/: guess_game.cpp
homework_2/igg_image/: CMakeLists.txt
homework_2/igg_image/data/: expt2.pgm  expt3.pgm
homework_2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
homework_2/igg_image/tests/: CMakeLists.txt  test_image.cpp
